fixed extra white space issue on project screenshots

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -39,4 +39,5 @@
 
 .projectScreenshot {
   width:100%;
+  height:100%;
 }
